# geoinsight-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.streamlit  README.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
backend/: config.py  logging_config.py  main.py  observability.py
backend/agent/: geo_agent.py  runner.py  system_prompt.py
backend/api/: schemas.py  sse.py
backend/db/: engine.py  queries.py
backend/db/migrations/: 001_schema.sql  002_indices.sql
backend/tools/: __init__.py  base.py  catchment_area.py  compare_zones.py  find_zones.py  geocode_zone.py  home_work_flow.py  roaming_analysis.py  zone_demographics.py  zone_traffic.py
data/: README.md  load_demo.py
docs/: geoinsight-agent-tz.md
docs/superpowers/plans/: 2026-04-18-geoinsight-agent-mvp.md
docs/superpowers/specs/: 2026-04-17-geoinsight-agent-design.md  2026-04-18-geoinsight-agent-design.md
infra/clickhouse/: keeper.xml
scripts/: reset_db.sh  start_backend.sh  start_streamlit.sh
streamlit_app/: app.py  artifacts.py  chat.py  client.py
tests/: test_artifacts.py  test_sse.py  test_tools.py
